# test_project

./: .gitignore  README.md  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: test.yml
src/my_package/: module.py
tests/: pytest_notes.txt  test_my_package.py
