# setup.cfg
[metadata]
name = my_project_1
version = 0.1.0
author = Pavan Kulkarni
author_email = pavanrk11@gmail.com
description = A sample Python project
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/my_project
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    flask
    pytest
package_dir =
    =src
zip_safe = no

[options.packages.find]
where=src

[options.extras_require]
dev =
    pytest
    unittest
    flake8

[flake8]
max-line-length = 88